--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <body>
     <div class="container">
         <div class ="banner">
-            <img src="banner.jpg" alt="Banner Image">
+            <img src="Banner.jpg" alt="Banner Image">
         </div>
         <div class="Photo">
             <img src="profile.jpg" alt="Profile Picture">
